Java8に変更。Java11のModule機能がモジュール非対応ライブラリのために最大限活用できないから。